# rocAL

./: .Doxyfile  .gitignore  .readthedocs.yaml  .wordlist.txt  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  copyright.txt  rocAL-setup.py
rocAL/: CMakeLists.txt
rocAL/include/: file_stream.h  tar_helper_functions.h  tar_utils.h
rocAL/include/api/: rocal_api.h  rocal_api_augmentation.h  rocal_api_data_loaders.h  rocal_api_data_transfer.h  rocal_api_info.h  rocal_api_meta_data.h  rocal_api_parameters.h  rocal_api_tensor.h  rocal_api_types.h
rocAL/include/augmentations/: augmentations_nodes.h  node_copy.h  node_nop.h  node_normal_distribution.h  node_sequence_rearrange.h  node_ssd_random_crop.h  node_uniform_distribution.h
rocAL/include/device/: device_code.h  device_data_transfer_code.h  device_manager.h  device_manager_hip.h  ocl_setup.h
rocAL/include/helpers/: tar_helper_functions.h
rocAL/include/loaders/: circular_buffer.h  image_source_evaluator.h  loader_module.h  numpy_source_evaluator.h  web_dataset_evaluator.h
rocAL/include/meta_data/: augmentations_meta_nodes.h  bounding_box_graph.h  caffe2_meta_data_reader.h  caffe2_meta_data_reader_detection.h  caffe_meta_data_reader.h  caffe_meta_data_reader_detection.h  cifar10_meta_data_reader.h  coco_meta_data_reader.h  coco_meta_data_reader_key_points.h  external_source_label_reader.h  label_reader_file_list.h  label_reader_folders.h  lookahead_parser.h  meta_data.h  meta_data_graph.h  meta_data_graph_factory.h  meta_data_reader.h  meta_data_reader_factory.h  meta_node.h  meta_node_crop.h  meta_node_crop_mirror_normalize.h  meta_node_crop_resize.h  meta_node_flip.h  meta_node_resize.h  meta_node_resize_crop_mirror.h  meta_node_resize_mirror_normalize.h  meta_node_rotate.h  meta_node_ssd_random_crop.h  mxnet_meta_data_reader.h  randombboxcrop_meta_data.h  randombboxcrop_meta_data_reader.h  randombboxcrop_meta_data_reader_factory.h  randombboxcrop_reader.h  text_file_meta_data_reader.h  tf_meta_data_reader.h  tf_meta_data_reader_detection.h  video_label_reader.h  webdataset_meta_data_reader.h
rocAL/include/parameters/: parameter.h  parameter_crop.h  parameter_crop_factory.h  parameter_factory.h  parameter_random.h  parameter_random_crop.h  parameter_random_crop_decoder.h  parameter_rocal_crop.h  parameter_simple.h  parameter_vx.h
rocAL/include/pipeline/: batch_rng.h  commons.h  context.h  exception.h  filesystem.h  graph.h  image.h  log.h  master_graph.h  node.h  ring_buffer.h  tensor.h  timing_debug.h
rocAL/include/readers/: file_source_reader.h  webdataset_source_reader.h
rocAL/proto/: example.proto  feature.proto
rocAL/rocAL_hip/: CMakeLists.txt  box_encoder_hip.cpp  box_encoder_hip.h  rocal_hip_kernels.cpp  rocal_hip_kernels.h
rocAL/rocAL_hip/utils/: colorspace_kernels.cpp  colorspace_kernels.h  resize_kernels.cpp  resize_kernels.h  video_demuxer.cpp  video_demuxer.h  video_post_process.h
rocAL/source/: file_io_stream.cpp  file_stream.cpp  tar_helper_functions.cpp  tar_utils.cpp
rocAL/source/api/: rocal_api.cpp  rocal_api_augmentation.cpp  rocal_api_data_loaders.cpp  rocal_api_data_transfer.cpp  rocal_api_info.cpp  rocal_api_meta_data.cpp  rocal_api_parameter.cpp
rocAL/source/augmentations/: node_copy.cpp  node_nop.cpp  node_normal_distribution.cpp  node_sequence_rearrange.cpp  node_ssd_random_crop.cpp  node_uniform_distribution.cpp
rocAL/source/device/: device_manager.cpp  device_manager_hip.cpp  ocl_setup.cpp
rocAL/source/helpers/: tar_helper_functions.cpp
rocAL/source/loaders/: circular_buffer.cpp  image_source_evaluator.cpp  numpy_source_evaluator.cpp  web_dataset_evaluator.cpp
rocAL/source/meta_data/: bounding_box_graph.cpp  caffe2_meta_data_reader.cpp  caffe2_meta_data_reader_detection.cpp  caffe_meta_data_reader.cpp  caffe_meta_data_reader_detection.cpp  cifar10_meta_data_reader.cpp  coco_meta_data_reader.cpp  external_source_label_reader.cpp  label_reader_file_list.cpp  label_reader_folders.cpp  meta_data_graph.cpp  meta_data_graph_factory.cpp  meta_data_reader_factory.cpp  meta_node_crop.cpp  meta_node_crop_mirror_normalize.cpp  meta_node_crop_resize.cpp  meta_node_flip.cpp  meta_node_resize.cpp  meta_node_resize_crop_mirror.cpp  meta_node_resize_mirror_normalize.cpp  meta_node_rotate.cpp  meta_node_ssd_random_crop.cpp  mxnet_meta_data_reader.cpp  randombboxcrop_meta_data_reader_factory.cpp  randombboxcrop_reader.cpp  text_file_meta_data_reader.cpp  tf_meta_data_reader.cpp  tf_meta_data_reader_detection.cpp  video_label_reader.cpp  webdataset_meta_data_reader.cpp
rocAL/source/parameters/: parameter_crop.cpp  parameter_factory.cpp  parameter_random_crop.cpp  parameter_random_crop_decoder.cpp  parameter_rocal_crop.cpp
rocAL/source/pipeline/: graph.cpp  image.cpp  master_graph.cpp  node.cpp  ring_buffer.cpp  tensor.cpp
rocAL/source/readers/: file_source_reader.cpp  webdataset_source_reader.cpp
rocAL_pybind/: CMakeLists.txt  README.md  __init__.py  getrocALwheelname.py  py_rocal_tensor.cpp  py_rocal_tensor.h  rocal_pybind.cpp  run.sh  setup.py
rocAL_pybind/amd/: __init__.py
rocAL_pybind/amd/rocal/: decoders.py  fn.py  pipeline.py  random.py  readers.py  types.py
rocAL_pybind/examples/: AUDIO_TEST.sh  PYTHON_UNITTEST_TEST_FILE.sh  READERS_TEST_FILE.sh  README.md  TEST_AUDIO_DATA.py  parse_config.py  rocAL_api_audio_unittest.py  rocAL_api_caffe2_reader.py  rocAL_api_caffe_reader.py  rocAL_api_coco_pipeline.py  rocAL_api_external_source_mode0_example.py  rocAL_api_external_source_mode1_example.py  rocAL_api_external_source_mode2_example.py  rocAL_api_external_source_reader_example.py  rocAL_api_numpy_reader.py  rocAL_api_pipeline.py  rocAL_api_python_unittest.py  rocAL_api_tf_classification_reader.py  rocAL_api_tf_detection_pipeline.py  rocAL_api_video_labels_pipeline.py  rocAL_api_video_pipeline.py
rocAL_pybind/examples/rocAL_example_doc/: Classification_training_flowerdataset.ipynb  tf_dataloader.ipynb
tests/pybind/: CMakeLists.txt  decoders_test.py  functions.py  functions_test.py  pipelines_test.py  randoms_test.py  readers_test.py  types.py  types_test.py
(+443 files in other folders)
